--- a/_includes/aida/action.html
+++ b/_includes/aida/action.html
@@ -1,3 +1,16 @@
 <section>
     <h2>Action</h2>
+    <p>
+        🔥 Limited Time Offer: Try TaskMaster free for 30 days.
+        Download now and reclaim control of your time!
+    </p>
+    <a href="" class="button">
+
+        Download Now
+    </a>
+    <a href="" class="button">
+
+        Learn More
+    </a>
+
 </section>
