--- a/_includes/aida/interest.html
+++ b/_includes/aida/interest.html
@@ -1,3 +1,9 @@
 <section>
     <h2>Interest</h2>
+    <p>TaskMaster isn't just another to-do app. It's your personal productivity AI that:</p>
+    <ul>
+        <li>Prioritizes tasks based on your goals and deadlines</li>
+        <li>Integrates seamlessly with your calendar and email</li>
+        <li>Provides intelligent suggestions to optimize your workflow</li>
+    </ul>
 </section>
