add features, blog

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,9 @@
       <a class="logo" href="/">{% include logo/logo.svg %}</a>
       <ul>
         <li><a href="/">Home</a></li>
+        <li><a href="/blog.html">Blog</a></li>
+        <li><a class="button" href="{{ site.login_url }}">Login</a></li>
+        <li><a class="button" href="{{ site.register_url }}">Register</a></li>
       </ul>
     </nav>
   </header>
