--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -45,6 +45,11 @@ nav {
             line-height: 6rem;
             margin: 0 1rem;
             color: var(--primary);
+            a.button {
+                line-height: 1rem;
+                height: 1rem;
+                padding: .5rem 1rem;
+            }
         }
 
     }
